--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.24.2
   provider: ^6.1.1
   email_validator: ^2.1.17
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
