--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   provider: ^6.1.1
   email_validator: ^2.1.17
   flutter_svg: ^2.0.9
+  infinite_scroll_pagination: ^4.0.0
+  hive: ^2.2.3
+  http: ^1.1.0
+  path_provider: ^2.1.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   assets:
     - assets/images/
     - assets/files/
+    - .env.dev
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
